Remove Travis CI scripts and enable maven tests